--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-/runtime/bot-token.txt
+/runtime/*
 /.idea/*
 
 ### IntelliJ IDEA ###
